* Fix Bug #1118255	Transformation of symbols in file-names
* Add gstreamer support.
* Add DVD ISO burning.
* Add DVD ejection option after burning.
* Add separate DVD and CD burning speeds.
* Don't ask for a CD/DVD if it is already in the drive
* Parent the message dialogs properly so they can't go behind other windows.
* Use gstreamer to calculate audio track lengths.

Version 0.3

* Dismiss the progress dialog if the action is cancelled.
* Refactor the preferences code to use gconf directly.
* Totally rewrite device scanning on linux to look at /proc (influenced by k3b and nautilus).
* Preferences dialog now has a tab for configuring devices.
* Remember writer and reader to improve startup speed (saved in gconf).
* Recursively create directories so it actually creates directories.
* Tidy up the labels we show in the devices combos and generally tidy up device handling.
* Fix filebrowser problem where /home would display the users home contents.
* Scanning for devices using cdrecord now ignores cameras, external drives etc.
* Show when we are fixating the disk in the progress dialog.
* Fix state bug where if you used a previous iso we would always say we failed.
* App now watches the gnome toolbar style and changes accordingly.
* Tooltips and toolbar styles have started working, looks like something got fixed in libglade?
* Tidy up the progress dialog code, improve performance and hopefully fix some xlib multithreading issues.
* Make the preferences dialog more gnomeesque with (almost) instant apply preferences.
* Filenames and directories can now be renamed by left clicking in the contents column of a data cd.
* Function tracing is now enabled by starting gnomebaker with --trace-on rather than always on.
* Use the splash screen on the about dialog as it looks good.
* Make the application icon smaller and use it in the desktop file which should now appear on the gnome menu.
* Preferences dialog now allows adding devices manually.