@@ -35,8 +35,8 @@ void cdrecord_add_audio_args (ExecCmd * const cdBurn);
 void cdrecord_add_blank_args (ExecCmd * const cdBurn);
 void cdrecord_add_create_audio_cd_args(ExecCmd* e, const GList* audiofiles);
 void dvdformat_add_args(ExecCmd * const dvdFormat);
-void growisofs_add_args(ExecCmd * const growisofs,GtkTreeModel* datamodel);
-void growisofs_add_iso_args(ExecCmd * const growisofs,const gchar *iso);
+gboolean growisofs_add_args(ExecCmd * const e, GtkTreeModel* datamodel);
+void growisofs_add_iso_args(ExecCmd * const growisofs, const gchar *iso);
 gboolean mkisofs_add_args(ExecCmd* e, GtkTreeModel* datamodel, const gchar* iso);
 void readcd_add_copy_args (ExecCmd * e, const gchar* iso);
 void cdrdao_add_bin_args(ExecCmd* cmd, const gchar* const bin);
